objects/ed_insights__Fields__mdt.object
<CustomObject>
    <fields>
        <fullName>ed_insights__DatasetName__c</fullName>
        <description>Name of the Dataset Join Record this mapping should be used</description>
        <inlineHelpText>Name of the Dataset Join Record this mapping should be used</inlineHelpText>
        <label>Dataset Joins</label>
        <referenceTo>ed_insights__Dataset_Joins__mdt</referenceTo>
        <relationshipName>Fields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ed_insights__Dataset_Field_Name__c</fullName>
        <description>Field in the dataset where some model input data lives</description>
        <inlineHelpText>Field in the dataset where some model input data lives</inlineHelpText>
        <label>Dataset Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ed_insights__Model_Input_Field_Name__c</fullName>
        <description>Name of the field which the model is expecting</description>
        <inlineHelpText>Name of the field which the model is expecting</inlineHelpText>
        <label>Model Input Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Dataset Field Mapping</label>
    <pluralLabel>Dataset Field Mappings</pluralLabel>
</CustomObject>